--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ LANGUAGE=id
 
 # ===== Crawl options =====
 PER_PAGE=50
-CONCURRENCY=4
+CONCURRENCY=8
 SLEEP_MS=500
 ONLY=
 
@@ -17,3 +17,9 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/quran_local
 
 # Checkpoint file (optional). If set, fetcher will resume.
 CHECKPOINT_PATH=.checkpoint.json
+
+# ===== Logging =====
+LOG_LEVEL=info          # debug|info|warn|error
+LOG_JSON=false          # true untuk JSON lines (siap dikonsumsi tools)
+LOG_FILE=               # contoh: logs/qf-export.log  (kosong = hanya console)
+LOG_INTERVAL_MS=10000   # heartbeat progress tiap 10 detik
